fix: generate correctly. (#195)